@startuml TechStoreDecoratorPattern

skinparam class {
    BackgroundColor<<Interface>> LightBlue
    BackgroundColor<<Decorator>> LightGreen
    BackgroundColor<<ConcreteDecorator>> LightYellow
}

interface ProductComponent <<Interface>> {
    + getId(): int
    + getName(): String
    + getDescription(): String
    + getPrice(): double
}

class ProductDecorator <<Decorator>> {
    - wrappedProduct: ProductComponent
    + ProductDecorator(wrappedProduct: ProductComponent)
    + getId(): int
    + getName(): String
    + getDescription(): String
    + getPrice(): double
    + getWrappedProduct(): ProductComponent
}

class ExtendedWarrantyDecorator <<ConcreteDecorator>> {
    - extraYears: int
    - WARRANTY_COST_PER_YEAR: double
    + getName(): String
    + getDescription(): String
    + getPrice(): double
}

class GiftWrapDecorator <<ConcreteDecorator>> {
    - GIFT_WRAP_COST: double
    + getName(): String
    + getDescription(): String
    + getPrice(): double
}

ProductComponent <|.. ProductDecorator
ProductDecorator <|-- ExtendedWarrantyDecorator
ProductDecorator <|-- GiftWrapDecorator

ProductDecorator *--> ProductComponent

note top of ProductComponent
  <<interface>>
  Defines the common interface for\nboth products and decorators
end note

note right of ProductDecorator
  <<abstract decorator>>
  • Maintains reference to wrapped component
  • Provides default implementations\n  that delegate to wrapped object
  • Concrete decorators override\n  specific methods
end note

note bottom of ExtendedWarrantyDecorator
  Adds extended warranty to product:
  • Adds cost per year
end note

note bottom of GiftWrapDecorator
  Adds gift wrapping service:
  • Adds fixed cost
end note

@enduml